// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile g - layout change 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <Image
        aspectRatio={1}
        borderRadius={105}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
    </div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Driving Off
      </h3>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`2. tile p - layout change 1`] = `
<Link
  url="/article/123"
>
  <div>
    <div>
      <Image
        aspectRatio={1}
        borderRadius={105}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
    </div>
    <div>
      <div>
        <div>
          LABEL
        </div>
      </div>
      <h3
        aria-level="3"
        role="heading"
      >
        Driving Off
      </h3>
      <h4
        aria-level="4"
        role="heading"
      >
        The resignation of three Conservative MPs has shown up the divisions in their party that mirror those in Labour. A greater realignment may be needed
      </h4>
      <div>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </div>
      <div>
        <span>
          Libby Purves
        </span>
      </div>
    </div>
  </div>
</Link>
`;
